k8s/ns.yml
# create namespace 
apiVersion: v1
kind: Namespace
metadata:
  name: app-space
