k8s/mongo-deploy.yml
# create deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-volume
              mountPath: /data/db
      volumes:
        - name: mongodb-volume
          hostPath:
            path: /mnt/efs
            type: DirectoryOrCreate
---
# creating service for mongodb deployment
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: app-space
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 31249
  type: NodePort
